--- a/docker/requirements.txt
+++ b/docker/requirements.txt
@@ -5,3 +5,5 @@ requests==2.23.0
 scikit-image==0.17.2
 opencv-python==4.2.0.34
 gunicorn[gevent]==20.0.4
+azure-storage-blob==12.0.0
+azure-datalake-store==0.0.49
